<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.module.authentication.fragment.ResetPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewResetPassword"
        style="@style/MuseoSans700.White.18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueTheme0C"
        android:gravity="center"
        android:paddingVertical="@dimen/_14sdp"
        android:text="@string/label_reset_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        style="@style/Widget.BaseAppTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_space_45"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/app_space_45"
        android:hint="@string/hint_new_password"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword"
        app:layout_constraintVertical_chainStyle="packed"
        app:passwordToggleDrawable="@drawable/selector_show_hide_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorGrey8B">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.BaseAppTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        style="@style/Widget.BaseAppTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/hint_confirm_password"
        app:layout_constraintBottom_toTopOf="@+id/buttonSend"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutNewPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNewPassword"
        app:passwordToggleDrawable="@drawable/selector_show_hide_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorGrey8B">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.BaseAppTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSend"
        style="@style/Widget.BaseAppBlueFillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/button_send"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>