<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.module.authentication.fragment.ForgetPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewForgetPassword"
        style="@style/MuseoSans700.White.18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueTheme0C"
        android:gravity="center"
        android:paddingVertical="@dimen/_14sdp"
        android:text="@string/label_forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintEmailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_space_45"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/app_space_45"
        app:layout_constraintBottom_toTopOf="@+id/buttonSend"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCountryCode"
            style="@style/Widget.BaseAppTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:hint="@string/hint_code"
            android:visibility="gone"
            app:endIconDrawable="@android:drawable/arrow_down_float"
            app:endIconMode="custom"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutEmailMobile"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.BaseAppTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="@integer/code_max_length" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailMobile"
            style="@style/Widget.BaseAppTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_username_or_mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textInputLayoutCountryCode"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.BaseAppTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="@integer/email_max_length" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSend"
        style="@style/Widget.BaseAppBlueFillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/button_send"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintEmailPhone"
        app:layout_constraintTop_toBottomOf="@+id/constraintEmailPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>